# jupyter_finos_widgets

./: .coveragerc  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  LICENSE.spdx  LICENSE.txt  MANIFEST.in  NOTICE  README.md  TODO.md  Test.ipynb  babel.config.js  codecov.yml  fdc3.json  install.json  jest.config.js  jupyter_finos_widgets.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.cjs  webpack.config.js
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: helper.js
examples/: introduction.ipynb
jupyter_fdc3_widgets/: _frontend.py  _version.py  fdc3_channel_join.py  fdc3_connection_status.py  fdc3_context_display.py  fdc3_raise_intent.py  fdc3_ticker_input.py
jupyter_fdc3_widgets/tests/: conftest.py  test_nbextension_path.py
jupyter_finos_widgets/: __init__.py  _frontend.py  channel.py  connection_status.py  context.py  example.py  fdc3_channel_join.py  fdc3_context_display.py  fdc3_ticker_input.py  fdc3_version.py  fdc3_view_news.py  ticker_input.py
jupyter_finos_widgets/labextension/: build_log.json  package.json
jupyter_finos_widgets/labextension/static/: lib_index_js.9cf0f61f165c1e3aa558.js  lib_index_js.9cf0f61f165c1e3aa558.js.map  lib_plugin_js.ffc174969e5c69a77573.js  lib_plugin_js.ffc174969e5c69a77573.js.map  lib_widgets_index_js-webpack_sharing_consume_default_react-dom_react-dom.9281f49c02038010d4c2.js  lib_widgets_index_js-webpack_sharing_consume_default_react-dom_react-dom.9281f49c02038010d4c2.js.map  remoteEntry.db93436be7769182806e.js  remoteEntry.db93436be7769182806e.js.map  vendors-node_modules_connectifi_agent-web_dist_main_js.156b4a102528078390b1.js  vendors-node_modules_connectifi_agent-web_dist_main_js.156b4a102528078390b1.js.map  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_react-dom_client_js-node_mod-692345.537743310e64a38932d0.js  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_react-dom_client_js-node_mod-692345.537743310e64a38932d0.js.map  vendors-node_modules_finos_fdc3_dist_fdc3_esm_js.f1c0c5bc9d029fe5166a.js  vendors-node_modules_finos_fdc3_dist_fdc3_esm_js.f1c0c5bc9d029fe5166a.js.map  vendors-node_modules_react-dom_index_js.60cdddd70ee3992c827e.js  (+3 more)
jupyter_finos_widgets/nbextension/: extension.js  index.js  index.js.map
jupyter_finos_widgets/tests/: test_nbextension_path.py
src/: ExampleWidget.tsx  FDC3ChannelJoin.tsx  FDC3ChannelWidget.tsx  FDC3ConnectionStatus.ts  FDC3ContextDisplay.ts  FDC3ContextDisplay.tsx  FDC3RaiseIntent.ts  FDC3TickerInput.ts  FDC3TickerInput.tsx  FDC3Version.component.tsx  FDC3Version.ts  FDC3Version.tsx  FDC3ViewNews.ts  constants.ts  extension.ts  index.ts  plugin.ts  test-utils.ts  version.ts  widget.ts
src/__tests__/: FDC3Version.spec.ts  FDC3Version.spec.tsx  index.spec.ts  utils.ts
src/widgets/: index.ts
src/widgets/fdc3-channel-join/: index.ts  (+3 more)
(+18 files in other folders)
