[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "jupyter_finos_widgets"
description = "A Custom Jupyter Widget Library"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Adaptive", email = "info@weareadaptive.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/chuck-adaptive/jupyter_finos_widgets"

[tool.hatch.build]
artifacts = [
    "jupyter_finos_widgets/nbextension/index.*",
    "jupyter_finos_widgets/labextension/*.tgz",
    "jupyter_finos_widgets/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_finos_widgets/nbextension" = "share/jupyter/nbextensions/jupyter_finos_widgets"
"jupyter_finos_widgets/labextension" = "share/jupyter/labextensions/jupyter_finos_widgets"
"./install.json" = "share/jupyter/labextensions/jupyter_finos_widgets/install.json"
"./jupyter_finos_widgets.json" = "etc/jupyter/nbconfig/notebook.d/jupyter_finos_widgets.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_finos_widgets/nbextension/index.js",
    "jupyter_finos_widgets/labextension/package.json",
]
skip-if-exists = [
    "jupyter_finos_widgets/nbextension/index.js",
    "jupyter_finos_widgets/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "jupyter_finos_widgets/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
